erDiagram

    USER {
        uuid id PK

        uuid openid
        str email
        boolean is_superuser

        timestamp created_at
        timestamp updated_at
    }

    ENTRIES {
        uuid id PK
    
        uuid user_id FK

        string name
        string description "NULL"
        boolean is_public "FALSE"

        timestamp created_at "NOW"
        timestamp updated_at "NOW"
    }
    
    VIEWS {
        uuid id PK

        uuid entry_id FK

        string name
        string description "NULL"
        str thumbnail_url
        str snapshot_url

        timestamp created_at "NOW"
        timestamp updated_at "NOW"
    }

    SHARE_LINKS {
        uuid id PK

        uuid entry_id FK

        str link_url
        boolean editable
        boolean active

        timestamp created_at "NOW"
        timestamp updated_at "NOW"
    }

                
    USER ||--o{ ENTRIES : "manages"
    ENTRIES ||--o{ VIEWS : "contains"
    ENTRIES ||--o| SHARE_LINKS : "has"
